Summary: | ASTERISK-26767: ARI channelvars cause memory leak | ||
Reporter: | Sébastien Duthil (sduthil) | Labels: | |
Date Opened: | 2017-02-03 15:13:10.000-0600 | Date Closed: | 2017-02-03 19:33:45.000-0600 |
Priority: | Major | Regression? | No |
Status: | Closed/Complete | Components: | Resources/res_ari |
Versions: | 14.2.0 14.2.1 | Frequency of Occurrence | Constant |
Related Issues: | |||
Environment: | Debian 8.7 64bits | Attachments: | ( 0) asterisk-26767-memory-leak.png |
Description: | Given I set channelvars=ANYTHING in ari.conf
Given I have a Stasis application connected to Asterisk registered to all channel events When I make about 90000 calls Then Asterisk takes up about 2GB of RAM When channelvars is not set in ari.conf, Asterisk RAM stays below 70MB. | ||
Comments: | By: Asterisk Team (asteriskteam) 2017-02-03 15:13:12.133-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Sébastien Duthil (sduthil) 2017-02-03 15:17:25.478-0600 Attached is a graph of the Asterisk process memory under load. Between the 26th and the 30th, the Asterisk took about 90000 calls in 4 days. On the 30th, we disabled channelvars in ari.conf and restarted the load test. By: Friendly Automation (friendly-automation) 2017-02-03 19:33:46.104-0600 Change 4885 merged by zuul: res_ari: fix memory leak for channelvars [https://gerrit.asterisk.org/4885|https://gerrit.asterisk.org/4885] By: Friendly Automation (friendly-automation) 2017-02-03 19:35:43.086-0600 Change 4886 merged by zuul: res_ari: fix memory leak for channelvars [https://gerrit.asterisk.org/4886|https://gerrit.asterisk.org/4886] |